# video_agora_django_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py
core/: api_urls.py  settings.py  urls.py
core/templatetags/: frontend.py
frontend/: package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/providers/: ReduxProvider.jsx
frontend/src/store/: index.js
frontend/src/store/api/: index.js
frontend/src/store/slice/: index.js
frontend/src/utils/: csrf.js
profiles/: models.py
profiles/api/: serializers.py  urls.py  views.py
static/react/: main.css  main.js  manifest.json
templates/: index.html
