[tool.poetry]
name = "django-rtc"
version = "0.1.0"
description = "How to videocall and voicemessage call or stream the video"
authors = ["Bikin Shrestha <razzshrz07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
